samples/_failures_safe/1761223314_9bbda2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b15bb07.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4b15bb07.c:171:9: error: expected expression at end of input
  171 |         if (token.type == TOKEN_EOF)
      |         ^~
./samples/SAFE/__tmp_4b15bb07.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b15bb07.c:171:9: error: expected declaration or statement at end of input
